--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,6 +5,6 @@
 
 @layer components {
     .btn-primary {
-        @apply text-gray-50 font-bold bg-gradient-to-r from-pink-700 to-red-500 text-center p-2 py-3 rounded-lg uppercase;
+        @apply inline-block text-gray-50 font-bold bg-gradient-to-r from-pink-700 to-red-500 text-center p-2 py-3 rounded-lg uppercase;
     }
 }
